--- a/styles.css
+++ b/styles.css
@@ -235,7 +235,7 @@ iframe.reveal-demo {
 
 .btn-action-primary {
   color: white;
-  background-color: #447099 !important;
+  background-color: #22458a !important;
 }
 
 .btn-action-primary:hover {
