--- a/custom.scss
+++ b/custom.scss
@@ -30,3 +30,4 @@ $h5-font-family:              Lato, sans-serif !default;
 
 $font-size-base:              1.05rem !default;
 $headings-font-weight:        400 !default;
+/*$line-height:                 200% !default;*/
